force-app/main/default/objects/CertificationAnswer__c/CertificationAnswer__c.object-meta.xml
<CustomObject>
    <label>Certification Answer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CertificationAnswer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CertificationAnswers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>