force-app/main/default/objects/CertificationAnswer__c/fields/CertificationQuestion__c.field-meta.xml
<CustomField>
    <fullName>CertificationQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Question</label>
    <referenceTo>CertificationQuestion__c</referenceTo>
    <relationshipLabel>CertificationAnswers</relationshipLabel>
    <relationshipName>CertificationAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>