force-app/main/default/objects/CertificationAnswer__c/fields/IsRightAnswer__c.field-meta.xml
<CustomField>
    <fullName>IsRightAnswer__c</fullName>
    <label>Is Right Answer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>